<resources>
    <string name="app_name">Cammino Neocatecumenale</string>
    <string name="title_comunita">Comunità</string>
    <string name="title_centro_voc">Centro vocazionale</string>
    <string name="title_promemoria">Promemoria</string>
    <string name="title_incontri">Incontri fratelli</string>
    <string name="title_seminari">Seminari</string>
    <string name="tutte_comunita">Tutte</string>
    <string name="oltre_un_anno_comunita">Data ultima visita</string>
    <string name="tappa_comunita">Elenco per tappa</string>
    <string name="diocesi_comunita">Elenco per diocesi</string>
    <string name="catechesi_iniziali">Catechesi iniziali</string>
    <string name="scrutinio_1">Primo scrutinio</string>
    <string name="shema">Shemà</string>
    <string name="scrutinio_2_aperto">Secondo scrutinio aperto</string>
    <string name="scrutinio_2_chiuso">Secondo scrutinio chiuso</string>
    <string name="iniziazione_preghiera">Iniziazione alla preghiera</string>
    <string name="traditio">Traditio</string>
    <string name="ritraditio">Re-traditio</string>
    <string name="redditio">Redditio</string>
    <string name="padre_nostro_1">Padre nostro - 1^ parte</string>
    <string name="padre_nostro_2">Padre nostro - 2^ parte</string>
    <string name="padre_nostro_3">Padre nostro - conclusione</string>
    <string name="elezione_1">Elezione - 1^ parte</string>
    <string name="elezione_2">Elezione - Parte intermedia</string>
    <string name="elezione_3">Elezione - finale</string>
    <string name="stato_attivo">Attivo</string>
    <string name="stato_non_attivo">Non Attivo</string>
    <string name="stato_deceduto">Passato al Padre</string>
    <string name="nuova_comunita">Nuova comunità</string>
    <string name="diocesi">Diocesi</string>
    <string name="comunita">Comunità</string>
    <string name="seminario">Seminario</string>
    <string name="parrocchia">Parrocchia</string>
    <string name="parroco">Parroco</string>
    <string name="e_mail">e-mail</string>
    <string name="responsabile">Responsabile</string>
    <string name="catechisti">Catechisti</string>
    <string name="responsabile_dots">Responsabile: %1$s</string>
    <string name="ultima_visita_dots">Ultima visita: %1$s</string>
    <string name="comunita_item_name">%1$s - %2$s</string>
    <string name="telefono">Telefono</string>
    <string name="tappa">Tappa di Cammino</string>
    <string name="tappa_provenienza">Tappa di provenienza</string>
    <string name="data_convivenza">Data convivenza</string>
    <string name="data_ultima_visita">Data ultima visita</string>
    <string name="data_ultima_modifica">Ultima modifica: %1$s</string>
    <string name="note">Osservazioni</string>
    <string name="comunita_dati_generali">Dati generali</string>
    <string name="comunita_elenco_fratelli">Elenco fratelli</string>
    <string name="invalid_email">Indirizzo e-mail non valido</string>
    <string name="invalid_number">Il campo deve essere numerico</string>
    <string name="invalid_date">Data non valida</string>
    <string name="mandatory_field">Campo obbligatorio</string>
    <string name="servizio_nome">Coppia/Sorella</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="stato_civile">Stato civile</string>
    <string name="coniuge">Coniuge</string>
    <string name="num_figli">N° figli</string>
    <string name="tribu">Tribù</string>
    <string name="data_nascita">Data di nascita</string>
    <string name="data_entrata_seminario">Data entrata in seminario</string>
    <string name="data_uscita_seminario">Data uscita dal seminario</string>
    <string name="motivo_uscita_seminario">Motivo uscita</string>
    <string name="carisma">Carisma</string>
    <string name="preveniente_da">Proveniente da…</string>
    <string name="data_inizio_cammino">Data inizio cammino</string>
    <string name="comunita_provenienza">Comunità di provenienza</string>
    <string name="catechisti_provenienza">Catechisti di provenienza</string>
    <string name="data_arrivo">Data di arrivo</string>
    <string name="stato_attuale">Stato attuale</string>
    <string name="cancella">Cancella</string>
    <string name="modifica">Modifica</string>
    <string name="nuovo_fratello">Nuovo fratello</string>
    <string name="modifica_fratello">Modifica fratello</string>
    <string name="save">Salva</string>
    <string name="delete_fratello">Rimuovi fratello</string>
    <string name="delete_promemoria">Cancella promemoria</string>
    <string name="delete_confirm">elimina</string>
    <string name="delete_fratello_dialog">Sei sicuro di voler rimuovere il fratello dalla comunità?</string>
    <string name="delete_promemoria_dialog">Sei sicuro di voler cancellare il promemoria?</string>
    <string name="delete_community">Rimuovi comunità</string>
    <string name="delete_community_dialog">Sei sicuro di voler rimuovere la comunità?</string>
    <string name="error">Errore</string>
    <string name="campi_non_compilati">Alcuni campi non sono compilati correttamente</string>
    <string name="passaggio_dots">Passaggio: %1$s</string>
    <string name="luogo_dots">Luogo: %1$s</string>
    <string name="data_passaggio_dots">Data: %1$s</string>
    <string name="history">Storia</string>
    <string name="nuovo_promemoria">Nuovo promemoria</string>
    <string name="modifica_promemoria">Modifica promemoria</string>
    <string name="data">Data</string>
    <string name="descrizione">Descrizione</string>
    <string name="promemoria_aggiunto">Promemoria aggiunto</string>
    <string name="promemoria_modificato">Promemoria modificato</string>
    <string name="incontro_aggiunto">Incontro aggiunto</string>
    <string name="incontro_modificato">Incontro modificato</string>
    <string name="incontro_cancellato">Incontro cancellato</string>
    <string name="nessun_promemoria">Non hai ancora aggiunto nessun promemoria.</string>
    <string name="nessun_incontro_todo">Non hai nessun incontro da fare.</string>
    <string name="nessun_incontro_done">Non hai nessun incontro completato.</string>
    <string name="nessun_incontro_convivenza">Non hai inserito nessun incontro/convivenza.</string>
    <string name="promemoria_rimosso">Promemoria rimosso</string>
    <string name="nuovo_incontro">Nuovo incontro</string>
    <string name="modifica_incontro">Modifica incontro</string>
    <string name="delete_incontro">Cancella incontro</string>
    <string name="delete_incontro_dialog">Sei sicuro di voler cancellare l\'incontro?</string>
    <string name="luogo">Luogo</string>
    <string name="meeting_da_completare">Da fare</string>
    <string name="meeting_completati">Fatti</string>
    <string name="meeting_done_button">Fatto</string>
    <string name="meeting_todo_button">Da fare</string>
    <string name="snackbar_done">Incontro segnato come Fatto</string>
    <string name="snackbar_todo">Incontro segnato come da fare</string>
    <string name="sort">Ordina per</string>
    <string name="sort_by_alphabet">Ordine alfabetico</string>
    <string name="sort_itineranti_before">Prima catechisti itineranti</string>
    <string name="no_fratelli">Non hai aggiunto nessun fratello alla comunità.</string>
    <string name="tutte_vocazioni">Tutte</string>
    <string name="tappa_vocazioni">Elenco per tappa</string>
    <string name="incontri_tab">Incontri</string>
    <string name="vocazione_filter">Filtra per</string>
    <string name="vocazione_male">Maschio</string>
    <string name="vocazione_female">Femmina</string>
    <string name="vocazione_filter_all">Tutti</string>
    <string name="vocazione_title">Vocazione</string>
    <string name="vocazione_new_title">Nuova vocazione</string>
    <string name="citta_label">Città</string>
    <string name="eta_label">Età</string>
    <string name="studi_label">Studi</string>
    <string name="delete_vocazione">Cancella vocazione</string>
    <string name="delete_vocazione_dialog">Sei sicuro di voler cancellare la vocazione?</string>
    <string name="n_d">N.D.</string>
    <string name="sesso_maschio">Maschio</string>
    <string name="sesso_femmina">Femmina</string>
    <string name="sesso_label">Sesso</string>
    <string name="tipo_incontro_label">Tipo</string>
    <string name="tipo_incontro_incontro">Incontro</string>
    <string name="tipo_incontro_convivenza">Convivenza</string>
    <string name="nessun_passaggio">N.D.</string>
    <string name="num_anni_label">Anni di cammino</string>
    <string name="no_vocazioni">Non hai aggiunto nessuna vocazione.</string>
    <string name="no_seminari">Non hai aggiunto nessun seminario.</string>
    <string name="nuovo_seminario">Nuovo Seminario</string>
    <string name="visite">Visite</string>
    <string name="seminaristi">Seminaristi</string>
    <string name="data_inizio">Data inizio</string>
    <string name="data_decreto">Data decreto</string>
    <string name="no_seminaristi">Non hai aggiunto nessun seminarista.</string>
    <string name="delete_seminario">Rimuovi seminario</string>
    <string name="delete_seminario_dialog">Sei sicuro di voler rimuovere questo seminario?</string>
    <string name="data_dal">Inizio incarico</string>
    <string name="data_al">Fine incarico</string>
    <string name="servizio_data_dal">Ingresso</string>
    <string name="servizio_data_al">Uscita</string>
    <string name="rettore">Rettore</string>
    <string name="comunita_assegnazione_label">Comunità di assegnazione</string>
    <string name="vice_rettore">Vice-rettore</string>
    <string name="direttore_spiriturale">Direttore spirituale</string>
    <string name="servizi_seminario">Servizi al seminario</string>
    <string name="delete_seminarista">Rimuovi seminarista</string>
    <string name="delete_seminarista_dialog">Sei sicuro di voler rimuovere il seminarista?</string>
    <string name="remove">Rimuovi</string>
    <string name="add">Aggiungi</string>
    <string name="details">Dettaglio</string>
    <string name="no_visite">Non hai aggiunto nessun visita al seminario.</string>
    <string name="data_dal_error">La data inizio non può essere successiva alla data fine</string>
    <string name="data_al_error">La data fine non può essere antecedente alla data inizio</string>
    <string name="formatori_presenti_label">Formatori presenti</string>
    <string name="seminaristi_presenti_label">Seminaristi presenti</string>
    <string name="note_label">Note</string>
    <string name="visita">Visita</string>
    <string name="nuova_visita">Nuova visita</string>
    <string name="modifica_visita">Modifica visita</string>
    <string name="delete_visita">Cancella visita</string>
    <string name="delete_visita_dialog">Sei sicuro di voler cancellare la visita?</string>
    <string name="annulla_modifiche_title">Scarta Modifiche</string>
    <string name="annulla_modifiche_dialog">Sei sicuro di voler scartare tutte le modifiche fatte?</string>
    <string name="annulla_modifiche_confirm">scarta</string>
    <string name="nuovo_seminarista">Nuovo seminarista</string>
    <string name="modifica_seminarista">Modifica seminarista</string>
    <string name="seminarista_title">Seminarista</string>
    <string name="nome_cognome_label">Nome e cognome</string>
    <string name="nazione_label">Nazione</string>
    <string name="admissio_label">Admissio</string>
    <string name="accolitato_label">Accolitato</string>
    <string name="lettorato_label">Lettorato</string>
    <string name="diaconato_label">Diaconato</string>
    <string name="presbiterato_label">Presbiterato</string>
    <string name="gplus_signout">Disconnetti account</string>
    <string name="gplus_revoke">Revoca permessi</string>
    <string name="upload_new_code">Carica e genera un nuovo codice</string>
    <string name="upload_old_code">Carica con codice esistente</string>
    <string name="restore_old_code">Sincronizza con codice esistente</string>
    <string name="restore_new_code">Sincronizza con nuovo codice</string>
</resources>