<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.cammino.gestionecomunita.ui.comunita.ComunitaIndexFragment"
        android:label="@string/title_comunita"
        tools:layout="@layout/tabs_layout" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="it.cammino.gestionecomunita.ui.dashboard.DashboardFragment"
        android:label="@string/title_centro_voc"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="it.cammino.gestionecomunita.ui.notifications.NotificationsFragment"
        android:label="@string/title_promemoria"
        tools:layout="@layout/fragment_notifications" />
</navigation>