<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/fratello_toolbar"
        style="@style/Widget.Material3.Toolbar.Surface"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/close_24px"
        app:title="@string/nuovo_fratello">

        <Button
            android:id="@+id/salva_fratello"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/container_horizontal_margin"
            android:text="@string/save" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fratello_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nome_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_field_space"
                android:layout_marginTop="@dimen/text_field_space"
                android:layout_marginEnd="@dimen/text_field_space"
                android:hint="@string/nome"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cognome_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_field_space"
                android:layout_marginTop="@dimen/text_field_space"
                android:layout_marginEnd="@dimen/text_field_space"
                android:hint="@string/cognome"
                app:layout_constraintTop_toBottomOf="@id/nome_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stato_civile_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_field_space"
                android:layout_marginTop="@dimen/text_field_space_no_error"
                android:layout_marginEnd="@dimen/text_field_space"
                android:hint="@string/stato_civile"
                app:layout_constraintTop_toBottomOf="@id/cognome_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numero_figli_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_field_space"
                android:layout_marginTop="@dimen/text_field_space_no_error"
                android:layout_marginEnd="@dimen/text_field_space"
                android:hint="@string/num_figli"
                app:layout_constraintTop_toBottomOf="@id/stato_civile_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/data_inizio_cammino_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_field_space"
                android:layout_marginTop="@dimen/text_field_space_no_error"
                android:layout_marginEnd="@dimen/text_field_space"
                android:hint="@string/data_inizio_cammino"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/numero_figli_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>