<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true"
        app:statusBarForeground="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/incontro_toolbar"
            style="@style/Widget.Material3.Toolbar.OnSurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/close_24px"
            app:title="@string/nuovo_incontro">

            <Button
                android:id="@+id/salva_incontro"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:text="@string/save" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nome_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:hint="@string/nome"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cognome_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_horizontal_margin"
                android:layout_marginTop="@dimen/text_field_space"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:hint="@string/cognome"
                app:layout_constraintTop_toBottomOf="@id/nome_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/data_incontro_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_horizontal_margin"
                android:layout_marginTop="@dimen/text_field_space_no_error"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:hint="@string/data"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/cognome_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/luogo_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_horizontal_margin"
                android:layout_marginTop="@dimen/text_field_space"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:hint="@string/luogo"
                app:layout_constraintTop_toBottomOf="@id/data_incontro_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comunita_auto_text"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_horizontal_margin"
                android:layout_marginTop="@dimen/text_field_space_no_error"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:hint="@string/comunita"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/luogo_text_field">

                <AutoCompleteTextView
                    android:id="@+id/comunita_autcomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comunita_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_horizontal_margin"
                android:layout_marginTop="@dimen/text_field_space_no_error"
                android:layout_marginEnd="@dimen/container_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comunita_auto_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="top"
                    android:inputType="text|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>